[metadata]
name = circkit
version = 0.1.1
author = CryptoExperts
author_email = contact@cryptoexperts.com
description = A circuit toolkit mainly for cryptographic usage.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CryptoExperts/circkit.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    graphviz==0.19.1
python_requires = >=3.7

[options.extras_require]
test =
    pytest>=5.4,<6
    coverage>=5.2,<6
docs =
    nbsphinx==0.8.8
    sphinxcontrib-napoleon==0.7
    sphinx-rtd-theme==1.0.0

